# bank-statements-processor

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bank_csvs/: lloyds_example.csv
constants/: bank.py  keywords.example.py
db/: create_tables.sql
src/: __init__.py  main.py
src/bank_csvs/: charles_schwab_example.csv
src/bank_statements_processor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/constants/: __init__.py  bank.py
src/db/: create_tables.sql
